Fix video banner and text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,12 @@ width: 100%;
 
 
 
-/* ------- Banner ---------- */
-
+/* ---------- Banner ----------- */
+.banner-image {
+    min-width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
 
 #about-arrow{
     opacity: 1;
@@ -120,36 +124,39 @@ font-family: 'Raleway', sans-serif;
 } */
 
 h1 {
-size: 50pt;
+size: 50vw;
 font-weight: bold;
 }
 
 h2 {
-size: 30pt;
+size: 30vw;
 font-weight: 300;
 }
 
 h3 {
-size: 20pt;
+size: 20vw;
 font-weight: 100;
 font-style: italic;
 }
 
 h4 {
-size: 15pt;
+size: 15vw;
 font-style: italic;
 }
 
 h5 {
-size: 12pt;
+size: 12vw;
 font-style: italic;
 }
 
 h6 {
-size: 10pt;
+size: 10vw;
 font-style: italic;
 }
 
+p {
+    size: 12vw
+}
 
 
 
